Updated 'Autofac' to latest version

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -100,16 +100,7 @@
       </namespaces>
     </pages>
     <httpModules />
-    <anonymousIdentification
-      enabled="true"
-      cookieless="UseCookies"
-      cookieName="SMARTSTORE.ANONYMOUS"
-      cookieTimeout="100000"
-      cookiePath="/"
-      cookieRequireSSL="false"
-      cookieSlidingExpiration = "true"
-      cookieProtection="None"
-    />
+    <anonymousIdentification enabled="true" cookieless="UseCookies" cookieName="SMARTSTORE.ANONYMOUS" cookieTimeout="100000" cookiePath="/" cookieRequireSSL="false" cookieSlidingExpiration="true" cookieProtection="None" />
   </system.web>
   <system.net>
     <connectionManagement>
@@ -221,7 +212,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
