--- a/src/Presentation/SmartStore.Web.Framework/packages.config
+++ b/src/Presentation/SmartStore.Web.Framework/packages.config
@@ -13,21 +13,25 @@
   <package id="FluentValidation" version="6.4.1" targetFramework="net452" />
   <package id="JavaScriptEngineSwitcher.Core" version="2.2.0" targetFramework="net452" />
   <package id="LibSassHost" version="0.6.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="5.2.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net451" />
-  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net451" />
-  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net452" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="System.Spatial" version="5.6.4" targetFramework="net451" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net452" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net452" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net452" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net452" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
