--- a/src/Presentation/SmartStore.Web/packages.config
+++ b/src/Presentation/SmartStore.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Autofac" version="4.5.0" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net452" />
+  <package id="AutoMapper" version="6.0.2" targetFramework="net452" />
   <package id="BundleTransformer.Autoprefixer" version="1.9.139" targetFramework="net452" />
   <package id="BundleTransformer.Core" version="1.9.138" targetFramework="net452" />
   <package id="BundleTransformer.Less" version="1.9.138" targetFramework="net452" />
