--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -4,11 +4,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <sectionGroup name="bundleTransformer"> 
-			<section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
-		  <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
-      <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
       <section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" />
+      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
       <section name="autoprefixer" type="BundleTransformer.Autoprefixer.Configuration.AutoprefixerSettings, BundleTransformer.Autoprefixer" />
+      <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
+      <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
     </sectionGroup>
   </configSections>
   <appSettings>
@@ -175,7 +175,7 @@
           <remove segment="ClearScript.V8" />
           <remove segment="LibSassHost.Native" />
           <add segment="ClearScript.V8" />
-          <add segment="LibSassHost.Native" />
+          <!--<add segment="LibSassHost.Native" />-->
         </hiddenSegments>
       </requestFiltering>
     </security>
@@ -236,11 +236,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.9.138.0" newVersion="1.9.138.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.152.0" newVersion="1.9.152.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="JavaScriptEngineSwitcher.Core" publicKeyToken="c608b2a8cc9e4472" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.2.0.0" newVersion="2.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.0.0" newVersion="2.4.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -327,7 +327,7 @@
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
       <css defaultPostProcessors="UrlRewritingCssPostProcessor, AutoprefixCssPostProcessor" defaultMinifier="MicrosoftAjaxCssMinifier" usePreMinifiedFiles="true" combineFilesBeforeMinification="false">
-        <translators>
+        <translators>  
           <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
           <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" enabled="true" />
           <add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" />
@@ -356,8 +356,8 @@
           <add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" />
         </minifiers>
         <fileExtensions>
-          <add fileExtension=".js" assetTypeCode="JavaScript" />
-        </fileExtensions>
+					<add fileExtension=".js" assetTypeCode="JavaScript" />
+				</fileExtensions>
       </js>
       <assetHandler disableServerCache="false" serverCacheDurationInMinutes="1440" disableClientCache="false" />
     </core>
