--- a/src/Presentation/SmartStore.Web/packages.config
+++ b/src/Presentation/SmartStore.Web/packages.config
@@ -5,28 +5,30 @@
   <package id="Autofac" version="4.5.0" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net452" />
   <package id="AutoMapper" version="6.0.2" targetFramework="net452" />
-  <package id="BundleTransformer.Autoprefixer" version="1.9.139" targetFramework="net452" />
-  <package id="BundleTransformer.Core" version="1.9.138" targetFramework="net452" />
-  <package id="BundleTransformer.Less" version="1.9.138" targetFramework="net452" />
+  <package id="BundleTransformer.Autoprefixer" version="1.9.155" targetFramework="net452" />
+  <package id="BundleTransformer.Core" version="1.9.152" targetFramework="net452" />
+  <package id="BundleTransformer.Less" version="1.9.143" targetFramework="net452" />
   <package id="BundleTransformer.MicrosoftAjax" version="1.9.92" targetFramework="net451" />
-  <package id="BundleTransformer.SassAndScss" version="1.9.138" targetFramework="net452" />
+  <package id="BundleTransformer.SassAndScss" version="1.9.154" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net451" />
   <package id="FluentValidation" version="6.4.1" targetFramework="net452" />
   <package id="FluentValidation.MVC5" version="6.4.0" targetFramework="net452" />
-  <package id="JavaScriptEngineSwitcher.Core" version="2.2.0" targetFramework="net452" />
-  <package id="JavaScriptEngineSwitcher.Msie" version="2.2.0" targetFramework="net452" />
-  <package id="JavaScriptEngineSwitcher.V8" version="2.2.0" targetFramework="net452" />
-  <package id="JavaScriptEngineSwitcher.V8.Native.win-x64" version="2.2.0" targetFramework="net452" />
-  <package id="JavaScriptEngineSwitcher.V8.Native.win-x86" version="2.2.0" targetFramework="net452" />
-  <package id="LibSassHost" version="0.6.1" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.Core" version="2.4.0" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="2.4.0" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.V8" version="2.4.0" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.V8.Native.win-x64" version="2.4.0" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.V8.Native.win-x86" version="2.4.0" targetFramework="net452" />
+  <package id="LibSassHost" version="1.0.3" targetFramework="net452" />
+  <package id="LibSassHost.Native.win-x64" version="1.0.3" targetFramework="net452" />
+  <package id="LibSassHost.Native.win-x86" version="1.0.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="MsieJavaScriptEngine" version="2.1.0" targetFramework="net452" />
+  <package id="MsieJavaScriptEngine" version="2.2.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
