Theme configuration: minor restructuring

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -113,8 +113,15 @@
     <Var name="menubar-inverse-color" type="Color">#fff</Var>
     <Var name="shopbar-inverse-color" type="Color">#fff</Var>
     <Var name="megamenu-inverse-color" type="Color">#fff</Var>
-    <Var name="mega-menu-height" type="String">1.8</Var> 
-    
+    <Var name="megamenu-line-height" type="String">1.8</Var>
+
+    <!-- Search -->
+    <Var name="searchbox-bg" type="Color">#fff</Var>
+    <Var name="searchbox-focus-bg" type="Color">#fff</Var>
+    <Var name="searchbox-border-color" type="Color">rgba(0,0,0, 0.12)</Var>
+    <Var name="searchbox-border-active-color" type="Color">rgba(0,0,0, 0.2)</Var>
+    <Var name="searchbox-hit-tag-color" type="Color">darken($brand-warning, 10%)</Var>
+
     <!-- States -->
     <Var name="state-success-text" type="Color">#3c763d</Var>
     <Var name="state-success-bg" type="Color">#dff0d8</Var>
@@ -152,11 +159,12 @@
     <Var name="table-bg-active" type="Color">$table-bg-hover</Var>
     <Var name="table-border-color" type="Color">$gray-lighter</Var>
     
-    <!--  -->
+    <!-- Misc  -->
     <Var name="shopbar-label" type="Select#brand-colors">warning</Var>
-    <Var name="search-button" type="Select#brand-colors">primary</Var>
+    <Var name="search-button-style" type="Select#brand-colors">primary</Var>
     <Var name="nav-tabs-active-link-color" type="Color">$gray</Var>
     <Var name="product-price-color" type="Color">$body-color</Var>
+    <Var name="product-detail-addtocart-box-bg" type="Color">$gray-lightest</Var>
     <Var name="login-box-bg" type="Color">#fcfcfc</Var>
     <Var name="cart-footer-bg" type="Color">$gray-lightest</Var>
     <Var name="costep-progress-color" type="Color">$brand-warning</Var>
