Installation sample data: Fashion products (in progress)

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -798,15 +798,17 @@
     <Content Include="Content\samples\product_adidas-tango-pasadena-ball-white.png" />
     <Content Include="Content\samples\product_adidas-tango-pasadena-ball-yellow.jpg" />
     <Content Include="Content\samples\product_all-court-basketball.png" />
+    <Content Include="Content\samples\product_allstar_charcoal.jpg" />
     <Content Include="Content\samples\product_allstar_converse.jpg" />
     <Content Include="Content\samples\product_allstar_hi_charcoal.jpg" />
     <Content Include="Content\samples\product_allstar_hi_maroon.jpg" />
     <Content Include="Content\samples\product_allstar_hi_navy.jpg" />
     <Content Include="Content\samples\product_allstar_hi_purple.jpg" />
     <Content Include="Content\samples\product_allstar_hi_white.jpg" />
-    <Content Include="Content\samples\product_allstar_lo_maroon.jpg" />
-    <Content Include="Content\samples\product_allstar_lo_navy.jpg" />
-    <Content Include="Content\samples\product_allstar_lo_white.jpg" />
+    <Content Include="Content\samples\product_allstar_maroon.jpg" />
+    <Content Include="Content\samples\product_allstar_navy.jpg" />
+    <Content Include="Content\samples\product_allstar_purple.jpg" />
+    <Content Include="Content\samples\product_allstar_white.jpg" />
     <Content Include="Content\samples\product_bestgrillingrecipes.jpg" />
     <Content Include="Content\samples\product_certina_ds_podium_big.png" />
     <Content Include="Content\samples\product_cookingfortwo.jpg" />
