Installation sample data: Fashion products (in progress)

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -836,6 +836,13 @@
     <Content Include="Content\samples\product_iphone-plus_silver.jpg" />
     <Content Include="Content\samples\product_iphoneplus_1.jpg" />
     <Content Include="Content\samples\product_iphoneplus_2.jpg" />
+    <Content Include="Content\samples\product_ladies_jacket_black.jpg" />
+    <Content Include="Content\samples\product_ladies_jacket_blue.jpg" />
+    <Content Include="Content\samples\product_ladies_jacket_green.jpg" />
+    <Content Include="Content\samples\product_ladies_jacket_navy.jpg" />
+    <Content Include="Content\samples\product_ladies_jacket_orange.jpg" />
+    <Content Include="Content\samples\product_ladies_jacket_red.jpg" />
+    <Content Include="Content\samples\product_ladies_jacket_silver.jpg" />
     <Content Include="Content\samples\product_mens_tshirt_red.jpg" />
     <Content Include="Content\samples\product_mens_tshirt_gray.jpg" />
     <Content Include="Content\samples\product_nike-vopower-53-trainer-hs-ball.jpg" />
