Installation sample data: Fashion products

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -820,6 +820,7 @@
     <Content Include="Content\samples\product_allstar_white.jpg" />
     <Content Include="Content\samples\product_bestgrillingrecipes.jpg" />
     <Content Include="Content\samples\product_certina_ds_podium_big.png" />
+    <Content Include="Content\samples\product_clark_premium_jeans.jpg" />
     <Content Include="Content\samples\product_cookingfortwo.jpg" />
     <Content Include="Content\samples\product_CustomFlakSunglasses.jpg" />
     <Content Include="Content\samples\product_dellinspiron23.png" />
