Megamenu dropdown theme variables

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -115,6 +115,13 @@
     <Var name="megamenu-inverse-color" type="Color">#fff</Var>
     <Var name="megamenu-line-height" type="String">1.8</Var>
 
+    <!-- Megamenu Dropdowns -->
+    <Var name="megamenu-dropdown-bg" type="Color">#fff</Var>
+    <Var name="megamenu-heading-color" type="Color">#222</Var>
+    <Var name="megamenu-subitem-color" type="Color">#999</Var>
+    <Var name="megamenu-text-color" type="Color">$body-color</Var>
+    <Var name="megamenu-rotator-bg" type="Color">rgba(255, 255, 255, 0.92)</Var>
+
     <!-- Search -->
     <Var name="searchbox-bg" type="Color">#fff</Var>
     <Var name="searchbox-focus-bg" type="Color">#fff</Var>
